very large commit merging in refactored quickload/localfile management system using the new DataProvider API.  This large commit is not best practice, but represents an instance where incremental non-breaking changes would have taken significantly longer to implement.